--- a/about.html
+++ b/about.html
@@ -9,11 +9,11 @@
   <div >
   <header>
     <h1> KITTIES TO GO! </h1>
-    <p id = "headerp"> Seattle's primary drive through cat rentals </p>
+    <p class = "headerp"> Seattle's primary drive through cat rentals </p>
   </header>
 
   <nav class="menu">
-    <ul id = "navlist">
+    <ul class = "navlist">
       <li><a href="about.html">About / </a></li>
       <li><a href="#">Rates / </a></li>
       <li><a href="#">Liability Relase / </a></li>
@@ -23,18 +23,18 @@
   </nav>
 
   <section>
-    <p id = "boldp"> About us: Our customers sure love our kitties! Go Kitties! </p>
-    <p id = "regularp">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+    <p class = "boldp"> About us: Our customers sure love our kitties! Go Kitties! </p>
+    <p class = "regularp">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
       totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
       Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui
       ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
       velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
 
     <aside>
-        <p id = "regularp">people say all the time, our kitties are by far the best! Go kitties! we love our fans. </p>
+        <p class = "regularp">people say all the time, our kitties are by far the best! Go kitties! we love our fans. </p>
     </aside>
 
-    <p id = "regularp">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
+    <p class = "regularp">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
       quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
        explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut
        fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
@@ -45,10 +45,10 @@
 
   </div>
   <footer>
-    <img src="images/cat-logo.png" alt="Smiley face" height=20% width = 20% > </img>
-    <p id = "footerp"> Aborpos nisto inci tet aut que volupti beruptiberro to ex  esseque invenienihil imaximu scideru ptistiusam consequunt  </p>
-    <p id = "footerp"> Footer link 1   /   Footer link 2   /   Footer link 3   /   Footer link 4</p>
-    <p id = "footerp"> © 2018 Kitties To Go!, LLC   |   Seattle, WA </p>
+    <img src="images/cat-logo.png" alt="Smiley face" height=20% width = 20% >
+    <p class = "footerp"> Aborpos nisto inci tet aut que volupti beruptiberro to ex  esseque invenienihil imaximu scideru ptistiusam consequunt  </p>
+    <p class = "footerp"> Footer link 1   /   Footer link 2   /   Footer link 3   /   Footer link 4</p>
+    <p class = "footerp"> © 2018 Kitties To Go!, LLC   |   Seattle, WA </p>
   </footer>
 
 
